# zkRoam

./: .gitignore  CDRGeneration.r1cs  CDRGeneration.sym  CDRGeneration_0000.zkey  CDRGeneration_0001.zkey  CDRGeneration_0002.zkey  CDRGeneration_0003.zkey  CDRGeneration_final.zkey  README.md  challenge_phase2_0003  foundry.toml  input.json
circuits/circom/: CDRGeneration.circom
private_evm_setup/: boot.key  bootnode.sh  bootstrap.sh  clean_state.sh  genesis.json  network_keypair
private_evm_setup/geth-alltools-linux-386-1.13.15-c5ba367e/: rlpdump
private_evm_setup/node1/keystore/: UTC--2025-03-18T08-27-16.822199023Z--73a7245efcaeb3addf55a55affc75a956b69854c
private_evm_setup/node2/keystore/: UTC--2025-03-18T08-28-54.782864967Z--0ea0eb8061cbdaf6684852a583234d882da63d25
private_evm_setup/node3/keystore/: UTC--2025-03-18T08-29-47.903917296Z--58d85998a7c6ed077f9fb913700f5f5da539a786
private_evm_setup/node4/keystore/: UTC--2025-03-18T08-30-22.754611551Z--46cc7efbc0fb7f80c037b33c7fe416692ea1075b
script/: SettleRoamingSession.s.sol  StartRoamingSession.s.sol  SubmitCDR.s.sol
script/deploy/: AgreementFactory.s.sol  CreateAgreement.s.sol
script/zk/: clean.bash  groth16_proof_generation.sh  loop_over_witnesses.sh  prove_cdr.sh  universal_setup.sh
snarkpack_aggregation/: Cargo.toml  run_experiments.sh
snarkpack_aggregation/src/: constraints.rs  main.rs
src/: Agreement.sol  AgreementFactory.sol  Groth16Verifier.sol
src/Mock/: MockUSDC.sol
test/: Poseidon.sol  RoamingSettlement.t.sol
