[package]
name = "snarkpack_aggregation"
version = "0.1.0"
edition = "2024"



[dependencies]

# Arkworks MUST be 0.4
ark-ff = { version = "0.4.0-alpha.0" }
ark-ec = "0.4.0"
ark-std = { version = "0.4.0-alpha.0" }
ark-relations = { version = "0.4.0-alpha.0" }
ark-serialize = "0.4.0"
ark-bls12-381 = { version = "0.4.0-alpha.0" }
ark-groth16 = "0.4.0"
ark-sponge = { version = "0.4.0-alpha" }
ark-r1cs-std = { version = "0.4.0-alpha.0" }
# SnarkPack
snarkpack = { git = "https://github.com/nikkolasg/snarkpack" }

# RNG
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"

# Merlin transcript
merlin = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38.2"

